<resources>
    <string name="app_name">Sportiva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="por_favor_inicie_sesi_n">Por favor, inicie sesión…</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="bienvenido_msg">Para empezar tu aventura, inicia sesión o registrate.</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="desc_registro_paso_uno">Introduce tu correo y contraseña para tu usuario.</string>
    <string name="contrase_a">Contraseña</string>
    <string name="sesiones">Sesiones</string>
    <string name="volver">Volver</string>
    <string name="quien_eres">¡Ahora dinos quien eres!</string>
    <string name="cuentanos_un_poco_mas">Y para terminar, cuentanos un poco más sobre ti.</string>
    <string name="trainers">Trainers</string>
    <string name="registrarse">Registrarse</string>
    <string name="unirme">Unirme</string>
    <string name="continuar">Continuar</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="texto_ejemplo">Querido empleado de Microsoft, el trainer de la empresa, David, ha organizado una sesión de aerobic en la planta 3 a las 6 de la tarde. ¿Te apuntas?</string>
    <string name="entrenador">Entrenador</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="perfil">Modificar perfil</string>
    <string name="ver_c_digo_qr">Ver código QR</string>
    <string name="error">Error</string>
    <string name="atencion">Atención</string>
    <string name="error_generico_conexion">Ha ocurrido un error desconocido al conectar con el servidor. Comprueba tu conexión a internet.</string>
    <string name="creedenciales_incorrectas">Las creedenciales son incorrectas. Revise el formulario de inicio de sesión.</string>
    <string name="usuario_inexistente">El usuario no existe. Revise el formulario de inicio de sesión.</string>
    <string name="no_se_han_encontrado_sesiones">No se han encontrado sesiones disponibles para tu usuario.</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="sportiva">Sportiva</string>
    <string name="crear_sesi_n">Crear\nsesión</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="comenzar">Comenzar</string>
    <string name="seleccionar_sesi_n_a_comenzar">Seleccionar sesión a comenzar</string>
    <string name="seleccione_sesion_a_comenzar">Por favor, seleccione la sesión que desea comenzar: </string>
    <string name="seleccione_sesion">Seleccione sesión</string>
    <string name="a_n_no_se_ha_seleccionado_ninguna_sesi_n_por_favor_seleccionela">Aún no se ha seleccionado ninguna sesión, por favor, seleccionela.</string>
    <string name="sesion_caducada">La sesión ha caducado. Vuelva a iniciar sesión.</string>
    <string name="no_se_han_creado_sesiones">Hoy no se han creado sesiones todavía o ya se han completado todas las sesiones programadas para hoy.</string>
    <string name="seguro_volver_atras">¿Está seguro que desea volver atrás? Esta acción descartará los cambios realizados.</string>
    <string name="no_hay_inscripciones">Nadie está inscrito a esta sesión.</string>
    <string name="deshacer_cambios">Deshacer cambios</string>
    <string name="no_hay_inscripciones_sesion">No se ha inscrito nadie\na esta sesión todavía.</string>
    <string name="escanea_qr">Escanea el código QR del empleado para confirmar su asistencia a la sesión.</string>
    <string name="este_qr_es_unico">Este es su código QR único. Utilizelo sólo cuando se lo exijan.</string>
    <string name="qr">QR</string>
    <string name="paso_1_entrenadores">Paso 1: Entrenadores</string>
    <string name="nombre_de_la_sesi_n">Título de la sesión</string>
    <string name="subt_tulo">Subtítulo de la sesión</string>
    <string name="descripci_n">Descripción</string>
    <string name="paso_2_informaci_n_general">Paso 2: Información general</string>
    <string name="paso_3_fecha_de_la_sesi_n">Paso 3: Fecha de la sesión</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="no_se_ha_seleccionado_fecha_a_n">No se ha seleccionado fecha aún.</string>
    <string name="paso_4_seleccionar_imagen">Paso 4: Seleccionar imagen</string>
    <string name="crear">Crear</string>
    <string name="a_adir_entrenador">Añadir entrenador</string>
    <string name="seleccione_imagen">Seleccione imagen</string>
    <string name="paso_5_aforo_m_ximo">Paso 5: Aforo máximo</string>
    <string name="aforo_ilimitado">Aforo ilimitado</string>
    <string name="numero_m_ximo_de_asistentes">Numero máximo de asistentes</string>
    <string name="comenzar_sesi_n">Comenzar sesión</string>
    <string name="error_current_usuario">Error con el usuario que inició sesión en la aplicación.</string>
    <string name="welcome_wallpaper">fondo de bienvenida</string>
    <string name="nos_alegramos_de_verte">¡Nos alegramos de volver a verte!</string>
    <string name="volver_atras">Volver atrás</string>
    <string name="logo_sportiva">logo sportiva</string>
    <string name="palma_mano">¡Y todo desde la palma de tu mano!</string>
    <string name="consigue_tus_objectivos">¡Consigue tus objetivos sin que te des cuenta de ello! \n Nosotros nos encargamos de gestionar tu tiempo de ejercicio.</string>
    <string name="lleva_control_de_las_sesiones">Lleva un control de tus sesiones de ejercicio de una manera muy fácil.</string>
    <string name="imagen_de_ejemplo">Imagen de ejemplo</string>
    <string name="volver_atr_s">Volver atrás</string>
    <string name="tomar_imagen">Tomar imagen</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="crear_nsesi_n">Crear\nsesión</string>
    <string name="comenzar_nsesi_n">Comenzar\nsesión</string>
    <string name="qu_acci_n_deseas_llevar_a_cabo">¿Qué acción deseas llevar a cabo?</string>
    <string name="actualmente_asignado_a">Actualmente asignado a</string>
    <string name="seleccionar_accion">Seleccionar acción</string>
    <string name="a_adir_entrenadores">Añadir entrenadores</string>
    <string name="informaci_n_general">Información general</string>
    <string name="fecha_y_hora">Fecha y hora</string>
    <string name="aforo">Aforo</string>
    <string name="foto_de_presentaci_n">Foto de presentación</string>
    <string name="a_adir_entrenador_participante">Añadir entrenador participante</string>
    <string name="t">(Tú)</string>
    <string name="t_tulo_de_la_sesi_n">Título de la sesión</string>
    <string name="subt_tulo_de_la_sesi_n">Subtítulo de la sesión</string>
    <string name="breve_resumen_de_la_sesi_n">Breve resumen de la sesión</string>
    <string name="fecha">Fecha:</string>
    <string name="introduce_el_numero_de_participantes_m_ximo">Introduce el numero de participantes máximo</string>
    <string name="realizar_imagen">Realizar imagen</string>
    <string name="finalizar">Finalizar</string>
    <string name="realiza_o_selecciona_una_imagen_de_tu_dispositivo_para_la_sesi_n_esta_imagen_ser_la_que_el_empleado_vea_en_la_lista_de_sesi_nes_en_las_que_puede_inscribirse">Realiza o selecciona una imagen de tu dispositivo para la sesión. Esta imagen será la que el empleado vea en la lista de sesiónes en las que puede inscribirse.</string>
    <string name="selecciona_la_cantidad_m_xima_de_participantes_que_podr_n_asistir_a_la_sesi_n_el_aforo_no_tiene_encuenta_ni_al_creador_ni_a_los_entrenadores_participantes">Selecciona la cantidad máxima de participantes que podrán asistir a la sesión. El aforo no tiene encuenta ni al creador ni a los entrenadores participantes.</string>
    <string name="selecciona_la_fecha_y_la_hora_en_la_que_tendr_lugar_la_sesi_n">Selecciona la fecha y la hora en la que tendrá lugar la sesión.</string>
    <string name="introduce_los_datos_b_sicos_acerca_de_la_sesi_n_esto_le_aparecer_al_empleado_en_la_lista_de_selecci_n_de_sesiones">Introduce los datos básicos acerca de la sesión, esto le aparecerá al empleado en la lista de selección de sesiones.</string>
    <string name="selecciona_los_entrenadores_que_te_ayudar_n_a_crear_la_sesi_n_s_lo_podr_s_a_adir_entrenadores_que_est_n_destinados_a_la_misma_empresa_que_t">Selecciona los entrenadores que te ayudarán a impartir la sesión. Sólo podrás añadir entrenadores que estén destinados a la misma empresa que tú.</string>
    <string name="siguiente">Siguiente</string>
    <string name="selecciona_en_la_lista_de_sesiones_que_has_programado_para_el_d_a_de_hoy_a_cual_de_ellas_deseas_dar_comienzo">Selecciona en la lista de sesiones que has programado para el día de hoy a cual de ellas deseas dar comienzo.</string>
    <string name="seleccionar_sesi_n">Seleccionar sesión</string>
    <string name="escanee_qr_tenga_en_cuenta">Escanee los códigos QR de los empleados que van a asistir a la sesión. Debes tener en cuenta que los empleados que no se hayan inscrito previamente no podrán formar parte de la sesión.</string>
    <string name="confirmar_asistencia">Confirmar asistencia</string>
    <string name="escanear_participante">Escanear participante</string>
    <string name="mostrar_c_digo_qr">Mostrar código QR</string>
    <string name="configuraci_n">Configuración</string>
    <string name="salir">Salir</string>
    <string name="no_hay_ninguna_sesi_n_programada_para_el_d_a_de_hoy">No hay ninguna sesión programada para el día de hoy.</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="empresa">Empresa</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="fumador">Fumo.</string>
    <string name="hago_deporte_frecuentemente">Hago deporte frecuentemente.</string>
    <string name="cargo">Cargo</string>
    <string name="grito_registrarme">¡Registrarme!</string>
    <string name="cargando">Cargando…</string>
    <string name="error_al_registrarse">Error al registrarse</string>
    <string name="registrando_empleado">Registrando empleado</string>
    <string name="registrando_entrenador">Registrando entrenador</string>
    <string name="estamos_registrando_tu_cuenta_por_favor_espera_un_momento">Estamos registrando tu cuenta, por favor, espera un momento</string>
    <string name="descargando_nueva_versi_n_de_la_aplicaci_n">Descargando nueva versión de la aplicación</string>
    <string name="por_favor_espere">Por favor, espere</string>
    <string name="comprobando_versiones">Comprobando versiones</string>
    <string name="estamos_comprobando_si_hay_nuevas_versiones_disponibles">Estamos comprobando si hay nuevas versiones disponibles</string>
    <string name="registro_de_entrenadores">Registro de entrenadores.</string>
    <string name="estudios">Estudios</string>
    <string name="sueldo">Sueldo</string>
    <string name="rellena_todos_loas_campos">Rellena todos loas campos.</string>
    <string name="crear_sesion">Crear sesión</string>
    <string name="comenzar_sesion">Comenzar sesión</string>
    <string name="editar">Editar</string>
    <string name="hora">Hora:</string>
    <string name="apuntarse_a_sesion">Apuntarse a sesión</string>
    <string name="empleado_registrado">Empleado registrado en </string>
    <string name="apuntarme">Apuntarme</string>
    <string name="descartar">Descartar</string>
    <string name="cancelar">cancelar</string>
    <string name="en_estos_momentos_no_hay_entrenadores_asignados_a_tu_empresa">En estos momentos no hay entrenadores asignados a tu empresa.</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="guion">-</string>
    <string name="fecha_de_naciniento">Fecha de naciniento</string>
    <string name="no_se_pudo_actualizar_la_imagen">No se pudo actualizar la imagen.</string>
</resources>