<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="es.dao.sportiva.ui.fragments.flujo_entrenador.crear_sesion.CrearSesionEntrenadorViewModel"
            />

        <variable
            name="constantes"
            type="es.dao.sportiva.utils.Constantes"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:background="@color/black"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        tools:context=".ui.fragments.flujo_entrenador.crear_sesion.pasos_formulario.Aforo4Fragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aforo"
            android:lines="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/selecciona_la_cantidad_m_xima_de_participantes_que_podr_n_asistir_a_la_sesi_n_el_aforo_no_tiene_encuenta_ni_al_creador_ni_a_los_entrenadores_participantes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/mcb_aforo_ilimitado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aforo_ilimitado"
            android:textColor="@color/white"
            android:checked="true"
            android:onCheckedChanged="@{(buttonView, isChecked) -> isChecked ? viewModel.setAforoIlimitado() : viewModel.setAforoNoDefinido()}"
            tools:checked="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_aforo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_el_numero_de_participantes_m_ximo"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/white"
            android:enabled="@{viewModel.aforo == constantes.AFORO_ILIMITADO ? false : true}"
            >

            <!--
            android:text="@{viewModel.tituloSesion.toString()}"
            android:afterTextChanged="@{(nuevoValor) -> viewModel.setTituloSesion(nuevoValor.toString())}"
            -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="number"
                android:maxLength="3"
                android:text="@{viewModel.aforo == constantes.AFORO_NO_DEFINIDO ? `` : viewModel.aforo.toString()}"
                android:afterTextChanged="@{(nuevoValor) -> nuevoValor.toString().empty ? viewModel.setAforoNoDefinido() : viewModel.setAforo(Integer.parseInt(nuevoValor.toString()))}"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</layout>