<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="es.dao.sportiva.ui.fragments.flujo_entrenador.crear_sesion.CrearSesionEntrenadorViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:background="@color/black"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        tools:context=".ui.fragments.flujo_entrenador.crear_sesion.pasos_formulario.InformacionGeneral2Fragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informaci_n_general"
            android:lines="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introduce_los_datos_b_sicos_acerca_de_la_sesi_n_esto_le_aparecer_al_empleado_en_la_lista_de_selecci_n_de_sesiones"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_tulo_de_la_sesi_n"
            android:transitionGroup="true"
            app:errorEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:maxLength="@integer/material_motion_duration_short_1"
                android:text="@{viewModel.tituloSesion.toString()}"
                android:afterTextChanged="@{(nuevoValor) -> viewModel.setTituloSesion(nuevoValor.toString())}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_subtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/subt_tulo_de_la_sesi_n"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@{viewModel.subtituloSesion.toString()}"
                android:afterTextChanged="@{(nuevoValor) -> viewModel.setSubtituloSesion(nuevoValor.toString())}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:maxLength="@integer/material_motion_duration_short_1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_descripcion"
            android:layout_width="match_parent"
            android:transitionGroup="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="0dp"
            android:hint="@string/breve_resumen_de_la_sesi_n"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/white"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:gravity="top"
                android:text="@{viewModel.resumenSesion.toString()}"
                android:afterTextChanged="@{(nuevoValor) -> viewModel.setResumenSesion(nuevoValor.toString())}"
                android:layout_height="match_parent"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>